<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/welcome_to_vacation_scheduler_app"
        android:textSize="28dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/vacationSearchEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:hint="Search vacations (title or hotel)"
        android:imeOptions="actionSearch"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/vacationSearchButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="Search"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/vacationSearchEditText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp" />

    <Button
        android:id="@+id/clearVacationSearchButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="Clear"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/vacationSearchEditText"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/vacationList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/vacationSearchButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/reportsButton" />

    <Button
        android:id="@+id/reportsButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/view_reports"
        android:backgroundTint="#3F51B5"
        app:layout_constraintBottom_toTopOf="@+id/addVacationButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addVacationButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/add_vacations"
        android:backgroundTint="#E91E63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>